Promeni napraveni vo POST baranje za posta, se povikuva na isti povik.